client-site/src/css/style.css
:root {
    --color-orange: #FF8A00;
    --color-blue: #0C6DFF;
    --color-red: #FF4392;
    --color-white: #fff;
    --color-black: #0F0F0F;

    --gap-miniscule: .5rem;
    --gap-small: 1rem;
    --gap-medium: 1.5rem;
    --gap-large: 2rem;
    --gap-enormous: 4rem;

    --border-fullround: 8rem;
    --border-medround: 4rem;
    --border-smallround: 2rem;
    --border-minround: 1.6rem;

    --bordsize-small: .2rem;
    --bordsize-med: .4rem;
    --bordsize-large: 1rem;

    --fontsize-small: 1rem;
    --fontsize-medium: 1.5rem;
    --fontsize-large: 2.5rem;
    --fontsize-extralarge: 4rem;
    --scale-svg-small: .8;
    --scale-svg-medium: .4;
}

html {
    scroll-behavior: smooth;
}

body {
    margin: 0;
    color: var(--color-black);
    background-color: var(--color-black);
    font-family: filson-pro, sans-serif;

}

h1 {
    display: none;
}

h2 {
    font-family: snug-variable, sans-serif;
    text-transform: uppercase;
    font-variation-settings: "XHGT" 100, "wdth" 100, "wght" 600;
    letter-spacing: .1rem;
    margin: 0;
    font-size: 4rem;
}

.error {
    background-color: var(--color-orange);
    block-size: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.error>h2::before,
.error>h2::after {
    content: url(/desktop/danger.svg);
    transform: scale(var(--scale-svg-medium));
}

.error>h2 {
    text-align: center;
    display: flex;
    align-items: center;
}

.error>.button {
    background-color: var(--color-black);
    color: var(--color-orange);
    transition: all .2s ease-in-out;
}

.error>.button:hover {
    background-color: var(--color-orange);
    color: var(--color-black);
    transition: all .2s ease-in-out;
}

.title {
    display: flex;
    align-items: center;
}

.navigation {
    background-color: var(--color-orange);
    color: var(--color-black);
    inline-size: 100vw;
    top: 0;
    left: 0;
}

.navigation>div {
    padding-inline: var(--gap-medium);
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.navigation,
.container__footer {
    border: var(--bordsize-small) solid var(--color-black);
}

.navigation,
.theme {
    position: fixed;
    z-index: 1000;
}

ul {
    display: flex;
    flex-direction: row;
    gap: var(--gap-large);
}

.navtab {
    color: var(--color-black);
    text-decoration: none;
    padding: var(--gap-miniscule) var(--gap-small);
    transition: all .2s ease-in-out;
}

.navtab:hover{
    background-color: var(--color-black);
    color: var(--color-orange);
    transition: all .2s ease-in-out;
}

.navtab:focus{
    border-block-end: var(--bordsize-med) solid var(--color-black);
}

.nav__button {
    background-color: var(--color-black);
    color: var(--color-white);
    padding: var(--gap-miniscule) var(--gap-medium);
}

.main {
    margin-block-start: 3rem;
}

.header {
    display: flex;
    flex-direction: column;
}

.theme {
    display: flex;
    flex-direction: row;
    background-color: var(--color-black);
    max-inline-size: 15%;
    gap: var(--gap-medium);
    padding: var(--gap-small) var(--gap-medium);
    border-radius: var(--border-fullround) 0 0 var(--border-fullround);
    align-items: center;
    border: var(--bordsize-small) solid var(--color-orange);
    right: 0;
    top: 10%;
}

.theme>img {
    max-inline-size: 30%;
    aspect-ratio: 1/1;
    animation: rotation 8s infinite linear;
}

.theme__flex>p {
    color: var(--color-white);
}

.container__header {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, 1fr);
    block-size: 90vh;
}

.quote::before {
    content: url(/desktop/bluetongue.svg);
    position: inherit;
    transform: scale(var(--scale-svg-small)) rotate(-15deg);
}

.quote::after {
    content: url(/desktop/orange.svg);
    display: inline-block;
    position: absolute;
    bottom: 40%;
    right: 55%;
    transform: scale(.8) rotate(45deg);
    overflow: hidden;
    z-index: -1;
}

.quote {
    align-self: center;
    grid-column: 1;
    grid-row: 1/ span 3;
    color: var(--color-white);
    padding-inline: var(--gap-large);
    z-index: 1;
    font-size: var(--fontsize-large);
    display: flex;
    flex-direction: column;
    align-items: center;
}

.quote>p {
    font-size: var(--fontsize-small);
}

.title__blue {
    color: var(--color-blue);
}

.title__orange::before,
.title__orange::after {
    content: url(/desktop/star.svg);
    transform: scale(var(--scale-svg-small));
}

.title__orange {
    color: var(--color-orange);
    display: flex;
    gap: var(--gap-small);
    align-items: center;
}

.title__white {
    color: var(--color-white);
}

canvas {
    grid-column: -1;
    grid-row: 1/ span 3;
}

.button::before,
.button::after {
    content: url(/desktop/circlestar.svg);
    position: inherit;
    transform: scale(var(--scale-svg-small));
}

.button {
    display: flex;
    align-items: center;
    gap: var(--gap-miniscule);
    justify-content: center;
    grid-column: 1/ span 3;
    grid-row: -1;
    font-size: var(--fontsize-small);
    font-weight: bold;
    background-color: var(--color-orange);
    border: var(--color-black) solid var(--bordsize-small);
    place-self: center;
    padding: var(--gap-miniscule) var(--gap-small);
    margin: var(--gap-small) var(--gap-medium);
    text-decoration: none;
    color: var(--color-black);
    transition: all .2s ease-in-out;
}

.button:hover {
    background-color: var(--color-black);
    color: var(--color-orange);
    transition: all .2s ease-in-out;
}

.scrollCta::before,
.scrollCta::after {
    content: url(/desktop/tripletriangle.svg);
    transform: scale(var(--scale-svg-small));
}


.scrollCta {
    padding-inline: var(--gap-medium);
    display: flex;
    background-color: var(--color-red);
    align-items: center;
    justify-content: space-between;
    z-index: 2;
}

.scrollCta>p::before,
.scrollCta>p::after {
    content: url(/desktop/downtriangle.svg);
    position: inherit;
    transform: scale(var(--scale-svg-small));
}

.scrollCta>p {
    display: flex;
    align-items: center;
    gap: var(--gap-miniscule);
    text-transform: uppercase;
    font-weight: bold;
}

.section {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    background-color: var(--color-blue);
    gap: var(--gap-large);
    block-size: 80vh;
    align-items: center;
}

.section--dark {
    background-color: var(--color-black);
    grid-template-rows: 60vh 8vh;
    block-size: 76vh;
}

.block__dark {
    background-color: var(--color-black);
    grid-column: 1;
    grid-row: 1 / span 2;
    display: flex;
    flex-direction: column;
    align-items: start;
    padding-inline-start: var(--gap-medium);
}

.block__dark> :nth-child(2)>.button {
    margin: 0;
}

.block__dark>div>.title--black {
    color: var(--color-blue);
}

.section--blue>.bodyCopy {
    max-inline-size: 20rem;
}


.stickerwall {
    grid-column: 2;
    grid-row: 1 / span 2;
    background-color: var(--color-white);
}

.secretlabel {
    grid-column: 1/ span 2;
    grid-row: 2;
    display: flex;
    gap: 10rem;
    align-items: center;
    background-color: var(--color-blue);
    filter: drop-shadow(13px 12px 0 var(--color-black));
    margin: var(--gap-medium);
    padding-inline: var(--gap-medium) 10rem;
}

.secretlabel::after {
    content: url(/desktop/happysmile.svg);
    position: absolute;
    right: 0;
    bottom: 20%;
    transform: scale(var(--scale-svg-small)) rotate(15deg);
}

.secretlabel>div>h2 {
    display: flex;
    gap: var(--gap-small);
    align-items: center;
}

.secretlabel>div>h2::before,
.secretlabel>div>h2::after {
    content: url(/desktop/dark_star.svg);
    transform: scale(var(--scale-svg-small));

}

.copy {
    color: var(--color-white);
    line-height: 150%;
}

.copy--br {
    display: flex;
    max-inline-size: 40rem;
}

.section__team {
    background-color: var(--color-blue);
    display: flex;
    gap: var(--gap-medium);
    align-items: center;
    flex-direction: column;
    padding-block: var(--gap-medium);
    border-radius: var(--border-medround) var(--border-medround) 0 0;
}

.section__team>div>h2::before,
.section__team>div>h2::after {
    content: url(/desktop/dark_star.svg);
}

.section__team>.secretlabel {
    background-color: var(--color-orange);
}

.section__team>.secretlabel::after {
    content: url(/desktop/winksmile.svg);
}

.section__team>.secretlabel>* {
    color: var(--color-black);
}

.team {
    display: flex;
    justify-content: space-between;
    gap: var(--gap-enormous);
}

.member {
    border-radius: var(--border-smallround);
    color: var(--color-white);
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: var(--color-black);
    border: var(--bordsize-med) solid var(--color-black);
    max-block-size: 100%;
}

.member::before {
    content: url(/desktop/monsters/orange.svg);
    position: absolute;
    bottom: -30%;
    transform: scale(var(--scale-svg-small));

}

.member:nth-child(2)::before,
.member:nth-child(3)::before {
    content: url(/desktop/monsters/blue.svg);
}

.member:last-child::before {
    content: url(/desktop/monsters/magenta.svg);
}

.member__block {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.member>img {
    border-radius: var(--border-minround) var(--border-minround) 0 0;
}

.member__copy:nth-child(2)::before,
.member__copy:nth-child(2)::after {
    content: url(/desktop/white_star.svg);
}

.member__copy:nth-child(2) {
    display: flex;
    gap: var(--gap-miniscule);
}

.container__footer {
    background-color: var(--color-orange);
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(2, 1fr);
    justify-items: center;

}

.container__socials {
    display: flex;
    gap: var(--gap-medium);
}

.social {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-decoration: none;
    color: var(--color-black);
}

.footer__info {
    grid-column: 1 /span 3;
    grid-row: 2;
    place-self: center;
}

.footer__info>ul {
    gap: 0;
}

.footerCopy>div>ul {
    display: flex;
    flex-direction: column;
}

.terms {
    padding-inline: var(--gap-miniscule);
}

.terms--outline {
    border-inline-end: 2px solid var(--color-black);
}

@keyframes rotation {
    from {
        transform: rotate(0deg);
    }

    to {
        transform: rotate(360deg);
    }
}

